--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "the_well>=1.1.0",
     "plotly>=6.0.1",
     "nbformat>=5.10.4",
-    "kaleido>=0.2.1"
+    "kaleido>=0.2.1",
+    "tqdm"
 ]
 requires-python = ">=3.8"
 description = "Transformer SINDy-SHRED"
