--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "plotly>=6.0.1",
     "nbformat>=5.10.4",
     "kaleido>=0.2.1",
+    "scipy",
     "tqdm"
 ]
 requires-python = ">=3.8"
