--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "nbformat>=5.10.4",
     "kaleido>=0.2.1",
     "scipy",
-    "tqdm"
+    "tqdm",
+    "palettable"
 ]
 requires-python = ">=3.8"
 description = "Transformer SINDy-SHRED"
