--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "kaleido>=0.2.1",
     "scipy>=1.15.3",
     "tqdm>=4.67.1",
-    "palettable>=3.3.3"
+    "palettable>=3.3.3",
+    "pyfiglet>=1.0.2"
 ]
 requires-python = ">=3.8"
 description = "Transformer SINDy-SHRED"
