--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "scikit_learn>=1.6.1",
     "torch>=2.7.0",
     "the_well>=1.1.0",
-    "plotly>=6.0.1",
+    "plotly==5.3.1",
     "nbformat>=5.10.4",
     "kaleido>=0.2.1",
     "scipy>=1.15.3",
